Make exposed constant List immutable